<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BasketCell" rowHeight="80" id="KGk-i7-Jjw" customClass="BasketCell" customModule="MiniBakkal" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3vJ-ge-xXl">
                        <rect key="frame" x="5" y="5" width="85" height="80"/>
                        <constraints>
                            <constraint firstAttribute="width" constant="85" id="x8V-Nf-hF0"/>
                        </constraints>
                    </imageView>
                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cFZ-Pj-304">
                        <rect key="frame" x="110" y="5" width="130" height="80"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aDW-uX-Kwd">
                                <rect key="frame" x="5" y="8" width="125" height="33.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="faz-qO-kIq">
                                <rect key="frame" x="5" y="46.5" width="125" height="33.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstAttribute="bottom" secondItem="faz-qO-kIq" secondAttribute="bottom" id="3Oh-yG-3n3"/>
                            <constraint firstItem="aDW-uX-Kwd" firstAttribute="leading" secondItem="cFZ-Pj-304" secondAttribute="leading" constant="5" id="3sN-um-Izn"/>
                            <constraint firstAttribute="trailing" secondItem="aDW-uX-Kwd" secondAttribute="trailing" id="8Zj-Pb-nOf"/>
                            <constraint firstItem="faz-qO-kIq" firstAttribute="leading" secondItem="cFZ-Pj-304" secondAttribute="leading" constant="5" id="G98-u8-eIc"/>
                            <constraint firstItem="faz-qO-kIq" firstAttribute="height" secondItem="aDW-uX-Kwd" secondAttribute="height" id="N6p-du-DMN"/>
                            <constraint firstItem="aDW-uX-Kwd" firstAttribute="top" secondItem="cFZ-Pj-304" secondAttribute="top" constant="8" id="PfD-7m-eGx"/>
                            <constraint firstAttribute="trailing" secondItem="faz-qO-kIq" secondAttribute="trailing" id="Rub-kH-yB5"/>
                            <constraint firstItem="faz-qO-kIq" firstAttribute="top" secondItem="aDW-uX-Kwd" secondAttribute="bottom" constant="5" id="wpY-J7-bci"/>
                        </constraints>
                    </view>
                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IqX-Vl-lKg">
                        <rect key="frame" x="250" y="35" width="60" height="20"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KRd-ef-kcS">
                                <rect key="frame" x="0.0" y="1" width="19.5" height="17.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="TableDecrement"/>
                                <state key="normal" backgroundImage="minus.square" catalog="system"/>
                                <connections>
                                    <action selector="productDeleted:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Qad-jf-jTz"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FPY-OL-Ftr">
                                <rect key="frame" x="39.5" y="1" width="20.5" height="17.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="TableIncrement"/>
                                <state key="normal" backgroundImage="plus.square" catalog="system"/>
                                <connections>
                                    <action selector="productAdded:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="f33-Ga-gc8"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hyO-Iq-cV7">
                                <rect key="frame" x="19.5" y="0.0" width="20" height="20"/>
                                <accessibility key="accessibilityConfiguration" identifier="TableLabel"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="20" id="RiA-7O-ebT"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="KRd-ef-kcS" firstAttribute="top" secondItem="IqX-Vl-lKg" secondAttribute="top" id="Dsi-3h-D2X"/>
                            <constraint firstAttribute="bottom" secondItem="KRd-ef-kcS" secondAttribute="bottom" id="Kse-IX-eyv"/>
                            <constraint firstAttribute="trailing" secondItem="FPY-OL-Ftr" secondAttribute="trailing" id="LVq-8d-rAz"/>
                            <constraint firstItem="FPY-OL-Ftr" firstAttribute="top" secondItem="IqX-Vl-lKg" secondAttribute="top" id="O2f-1a-4zS"/>
                            <constraint firstAttribute="bottom" secondItem="hyO-Iq-cV7" secondAttribute="bottom" id="TWX-Ex-tQm"/>
                            <constraint firstItem="FPY-OL-Ftr" firstAttribute="leading" secondItem="hyO-Iq-cV7" secondAttribute="trailing" id="Y4A-bX-qcq"/>
                            <constraint firstAttribute="bottom" secondItem="FPY-OL-Ftr" secondAttribute="bottom" id="aMS-rL-aBb"/>
                            <constraint firstItem="hyO-Iq-cV7" firstAttribute="leading" secondItem="KRd-ef-kcS" secondAttribute="trailing" id="aTy-MB-yeH"/>
                            <constraint firstItem="hyO-Iq-cV7" firstAttribute="top" secondItem="IqX-Vl-lKg" secondAttribute="top" id="iVe-6E-Bb1"/>
                            <constraint firstAttribute="width" constant="60" id="p93-8g-bYe"/>
                            <constraint firstItem="KRd-ef-kcS" firstAttribute="leading" secondItem="IqX-Vl-lKg" secondAttribute="leading" id="tca-NV-P6R"/>
                            <constraint firstAttribute="height" constant="20" id="uL9-lY-cQx"/>
                        </constraints>
                    </view>
                </subviews>
                <constraints>
                    <constraint firstItem="cFZ-Pj-304" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="1Eg-hQ-Puv"/>
                    <constraint firstAttribute="bottom" secondItem="cFZ-Pj-304" secondAttribute="bottom" constant="5" id="204-Yu-q2k"/>
                    <constraint firstAttribute="trailing" secondItem="IqX-Vl-lKg" secondAttribute="trailing" constant="10" id="9By-0u-J21"/>
                    <constraint firstItem="IqX-Vl-lKg" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="FQ8-Q2-Jsd"/>
                    <constraint firstItem="3vJ-ge-xXl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="MOW-hr-6Rc"/>
                    <constraint firstAttribute="bottom" secondItem="3vJ-ge-xXl" secondAttribute="bottom" constant="5" id="QkO-BB-6xr"/>
                    <constraint firstItem="cFZ-Pj-304" firstAttribute="leading" secondItem="3vJ-ge-xXl" secondAttribute="trailing" constant="20" id="X7F-KV-F2h"/>
                    <constraint firstItem="IqX-Vl-lKg" firstAttribute="leading" secondItem="cFZ-Pj-304" secondAttribute="trailing" constant="10" id="sT8-EF-O5S"/>
                    <constraint firstItem="3vJ-ge-xXl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="w3m-cT-xQW"/>
                </constraints>
            </tableViewCellContentView>
            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
            <connections>
                <outlet property="addBtn" destination="FPY-OL-Ftr" id="Tsq-56-lm0"/>
                <outlet property="count" destination="hyO-Iq-cV7" id="Pvg-fY-3WT"/>
                <outlet property="deleteBtn" destination="KRd-ef-kcS" id="rrm-8R-5TO"/>
                <outlet property="name" destination="aDW-uX-Kwd" id="C4G-Sk-VCz"/>
                <outlet property="price" destination="faz-qO-kIq" id="gCi-ib-YcC"/>
                <outlet property="productImage" destination="3vJ-ge-xXl" id="2EJ-Qo-HTS"/>
            </connections>
            <point key="canvasLocation" x="137.68115942028987" y="144.64285714285714"/>
        </tableViewCell>
    </objects>
    <resources>
        <image name="minus.square" catalog="system" width="128" height="114"/>
        <image name="plus.square" catalog="system" width="128" height="114"/>
    </resources>
</document>
