<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="GroseryCell" id="gTV-IL-0wX" customClass="GroseryCell" customModule="MiniBakkal" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="100" height="172"/>
            <autoresizingMask key="autoresizingMask"/>
            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                <rect key="frame" x="0.0" y="0.0" width="100" height="172"/>
                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                <subviews>
                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="z6j-ch-D3p">
                        <rect key="frame" x="0.0" y="0.0" width="100" height="118.5"/>
                    </imageView>
                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gop-xf-nHW">
                        <rect key="frame" x="0.0" y="118.5" width="100" height="53.5"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wgn-0c-f59">
                                <rect key="frame" x="2" y="26.5" width="96" height="21"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                <color key="textColor" red="0.57221500759999999" green="0.58356706020000004" blue="0.61811852329999994" alpha="0.86699493839999997" colorSpace="custom" customColorSpace="displayP3"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D3l-xi-uwz">
                                <rect key="frame" x="2" y="6" width="96" height="14.5"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                <color key="textColor" red="0.3123456147" green="0.549022326" blue="0.72919365280000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="D3l-xi-uwz" firstAttribute="bottom" secondItem="wgn-0c-f59" secondAttribute="top" constant="-6" id="3xz-Lz-J41"/>
                            <constraint firstItem="D3l-xi-uwz" firstAttribute="leading" secondItem="Gop-xf-nHW" secondAttribute="leading" constant="2" id="O6E-Cs-ETO"/>
                            <constraint firstAttribute="bottom" secondItem="wgn-0c-f59" secondAttribute="bottom" constant="6" id="SWv-0b-YWD"/>
                            <constraint firstItem="wgn-0c-f59" firstAttribute="height" secondItem="D3l-xi-uwz" secondAttribute="height" multiplier="1.5" id="Udo-Qy-8VL"/>
                            <constraint firstAttribute="trailing" secondItem="D3l-xi-uwz" secondAttribute="trailing" constant="2" id="a8r-M1-6ax"/>
                            <constraint firstItem="wgn-0c-f59" firstAttribute="leading" secondItem="Gop-xf-nHW" secondAttribute="leading" constant="2" id="har-6X-5uH"/>
                            <constraint firstItem="D3l-xi-uwz" firstAttribute="top" secondItem="Gop-xf-nHW" secondAttribute="top" constant="6" id="tx6-Fs-8m0"/>
                            <constraint firstAttribute="trailing" secondItem="wgn-0c-f59" secondAttribute="trailing" constant="2" id="wow-gI-e0Q"/>
                        </constraints>
                    </view>
                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XFr-mW-nxW">
                        <rect key="frame" x="36" y="4" width="60" height="20"/>
                        <subviews>
                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CUF-a1-drA">
                                <rect key="frame" x="0.0" y="1" width="20" height="17.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="CollectionDecrement"/>
                                <state key="normal" backgroundImage="minus.square" catalog="system"/>
                                <connections>
                                    <action selector="deleteProduct:" destination="gTV-IL-0wX" eventType="touchUpInside" id="Rf5-7b-gdI"/>
                                </connections>
                            </button>
                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ItI-Yd-EWo">
                                <rect key="frame" x="20" y="0.0" width="20" height="20"/>
                                <accessibility key="accessibilityConfiguration" identifier="CollectionLabel"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="20" id="rC0-S4-iRM"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G8Q-sP-ZO0">
                                <rect key="frame" x="40" y="1" width="20" height="17.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="CollectionIncrement"/>
                                <state key="normal" backgroundImage="plus.square" catalog="system"/>
                                <connections>
                                    <action selector="addProduct:" destination="gTV-IL-0wX" eventType="touchUpInside" id="wA1-4m-ZSA"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="0.678284551056338" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstAttribute="height" constant="20" id="2L7-Tp-nlW"/>
                            <constraint firstItem="G8Q-sP-ZO0" firstAttribute="top" secondItem="XFr-mW-nxW" secondAttribute="top" id="7nu-Wo-Zpb"/>
                            <constraint firstAttribute="width" constant="60" id="A82-MQ-a0o"/>
                            <constraint firstItem="CUF-a1-drA" firstAttribute="leading" secondItem="XFr-mW-nxW" secondAttribute="leading" id="CcY-K8-4lZ"/>
                            <constraint firstAttribute="bottom" secondItem="ItI-Yd-EWo" secondAttribute="bottom" id="bdB-aG-kw1"/>
                            <constraint firstAttribute="trailing" secondItem="G8Q-sP-ZO0" secondAttribute="trailing" id="d60-1a-mSg"/>
                            <constraint firstAttribute="bottom" secondItem="G8Q-sP-ZO0" secondAttribute="bottom" id="evs-Ct-YHP"/>
                            <constraint firstItem="G8Q-sP-ZO0" firstAttribute="leading" secondItem="ItI-Yd-EWo" secondAttribute="trailing" id="hA5-Mq-jT9"/>
                            <constraint firstItem="ItI-Yd-EWo" firstAttribute="leading" secondItem="CUF-a1-drA" secondAttribute="trailing" id="ieN-R0-ne6"/>
                            <constraint firstAttribute="bottom" secondItem="CUF-a1-drA" secondAttribute="bottom" id="pSc-li-CLn"/>
                            <constraint firstItem="ItI-Yd-EWo" firstAttribute="top" secondItem="XFr-mW-nxW" secondAttribute="top" id="sLK-Dr-Xnc"/>
                            <constraint firstItem="CUF-a1-drA" firstAttribute="top" secondItem="XFr-mW-nxW" secondAttribute="top" id="woh-wj-Hgc"/>
                        </constraints>
                    </view>
                </subviews>
            </view>
            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
            <constraints>
                <constraint firstItem="z6j-ch-D3p" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="5a8-rg-YAP"/>
                <constraint firstAttribute="trailing" secondItem="XFr-mW-nxW" secondAttribute="trailing" constant="4" id="8Nz-VK-CAu"/>
                <constraint firstItem="Gop-xf-nHW" firstAttribute="height" secondItem="z6j-ch-D3p" secondAttribute="height" multiplier="0.45" id="8TB-1m-hgV"/>
                <constraint firstItem="z6j-ch-D3p" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Ee3-47-Cjn"/>
                <constraint firstAttribute="bottom" secondItem="Gop-xf-nHW" secondAttribute="bottom" id="Q7P-ks-zlZ"/>
                <constraint firstAttribute="trailing" secondItem="z6j-ch-D3p" secondAttribute="trailing" id="ROq-eB-fyT"/>
                <constraint firstItem="Gop-xf-nHW" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="iML-Vf-y7i"/>
                <constraint firstItem="Gop-xf-nHW" firstAttribute="top" secondItem="z6j-ch-D3p" secondAttribute="bottom" id="sFY-dg-Xur"/>
                <constraint firstItem="XFr-mW-nxW" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="tNI-MU-eDj"/>
                <constraint firstAttribute="trailing" secondItem="Gop-xf-nHW" secondAttribute="trailing" id="tYP-KF-N5t"/>
            </constraints>
            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
            <size key="customSize" width="120" height="215"/>
            <connections>
                <outlet property="addBtn" destination="G8Q-sP-ZO0" id="zJ9-o1-nYM"/>
                <outlet property="count" destination="ItI-Yd-EWo" id="DEb-k5-MNw"/>
                <outlet property="deleteBtn" destination="CUF-a1-drA" id="Wpa-rT-slp"/>
                <outlet property="imageView" destination="z6j-ch-D3p" id="CAn-Mc-tX3"/>
                <outlet property="name" destination="wgn-0c-f59" id="Zgc-sf-x0t"/>
                <outlet property="price" destination="D3l-xi-uwz" id="pc6-SG-32z"/>
            </connections>
            <point key="canvasLocation" x="188.40579710144928" y="187.5"/>
        </collectionViewCell>
    </objects>
    <resources>
        <image name="minus.square" catalog="system" width="128" height="114"/>
        <image name="plus.square" catalog="system" width="128" height="114"/>
    </resources>
</document>
