...
}

class GroseryListViewController: UIViewController {
    
    private var products: [Product] = []
    var presenter : GroseryListPresenterProtocol!
    let cartBtn = BadgedButtonItem(with: UIImage(systemName: "cart"))
    var selectedProductsdelegate: SelectedProductsProtocol?

    fileprivate let collectionView:UICollectionView = {
        let layout: UICollectionViewFlowLayout = UICollectionViewFlowLayout()
        layout.sectionInset = UIEdgeInsets(top: 10, left: 10, bottom: 10, right: 10)
        layout.itemSize = CGSize(width: 100, height: 170)
        layout.minimumLineSpacing = 20
        let cv = UICollectionView(frame: .zero, collectionViewLayout: layout)
        cv.translatesAutoresizingMaskIntoConstraints = false
        cv.register(UINib.init(nibName: "GroseryCell", bundle: nil), forCellWithReuseIdentifier: "GroseryCell")
        cv.accessibilityIdentifier = "CollectionView"
        return cv
    }()
    
    private var selectedProducts: [Product] = []{
        didSet{
            cartBtn.setBadge(with: selectedProducts.count)
...
