...
    }
    
    
    override func viewDidLoad() {
        super.viewDidLoad()
        groupedItems = Dictionary(grouping: selectedProducts, by: {$0.id!})
        tableView.accessibilityIdentifier = "TableView"
        setNavigationItems()
    }

    func showEmptyMessage(){
        if selectedProducts.count == 0{
            tableView.showMessage(message: "Sepetinizde ürün bulunmamaktadır. ", containerView: tableView)
...
        let closeBtn = UIButton(frame: CGRect(x: 0, y: 0, width: 20, height: 20))
        closeBtn.titleLabel?.font = UIFont(name: "Arial-BoldMT", size: 16)
        closeBtn.setTitle("Kapat", for: .normal)
        closeBtn.titleLabel?.textAlignment = .center
        closeBtn.setTitleColor(.systemBlue, for: .normal)
        closeBtn.backgroundColor = .clear
        closeBtn.accessibilityIdentifier = "Close"
        closeBtn.addTarget(self, action: #selector(closeBasket), for: .touchUpInside)
        let barCloseBtn = UIBarButtonItem(customView: closeBtn)
        
        self.navigationItem.rightBarButtonItem = barCloseBtn
    }
    
...
